# dracula-covid19

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  combined.parquet  dracula-covid19.ipr  dracula-covid19.iws  world_pop2020.csv
kubernetes/: dracula-covid19-cronjob.yaml  dracula-covid19-web-deployment.yaml  index.css  index.html  index.js
src/: aws.rs  cleaner.rs  covid19_data.rs  covid_record.rs  error.rs  lib.rs  main.rs  parquet_writer.rs  us_cleaner.rs  world_population.rs
tableau/: covid_tracker_shipped_2.twb
